2016-10-15  Niels Möller  <nisse@lysator.liu.se>

	* x86_64/skein256-internal.asm: New file, initial assembly
	implementation for x86_64. Modest speedup compared to C version.

2016-10-13  Niels Möller  <nisse@lysator.liu.se>

	* Makefile.in (nettle_SOURCES): Added skein256-internal.c.

	* skein256-internal.c (_skein256_block): Move to a separate file,
	from...
	* skein256.c: ... old location.

2016-10-12  Niels Möller  <nisse@lysator.liu.se>

	* skein.h (_SKEIN256_NKEYS, _SKEIN_NTWEAK): Increase to 6 and 4,
	respectively, to reduce number of modulo operations.
	* skein256.c (_skein256_expand): Intialize the additional words.
	(_skein256_block): Avoid modulo operations in the loop. Almost 50%
	speedup.

	* skein256.c (_skein256_expand): New function.
	(skein256_process_block): Use it.

	* testsuite/skein256-test.c (test_skein256_block): Use it.

2016-10-10  Niels Möller  <nisse@lysator.liu.se>

	* skein.h (struct skein256_ctx): New context struct.
	* skein256.c (skein256_init, skein256_update, skein256_digest):
	New functions.
	(skein256_process_block): New internal function.
	* skein256-meta.c (nettle_skein256): New file, new nettle_hash.
	* nettle-meta.h (nettle_skein256): Declare it.
	* examples/nettle-benchmark.c (main): Add benchmarking of
	nettle_skein256
	* testsuite/skein256-test.c (test_main): Add test cases from
	skein-1.3 paper.

2016-10-07  Niels Möller  <nisse@lysator.liu.se>

	* skein256.c (_skein256_block): New file and function.
	* skein.h: New file.
	* Makefile.in (nettle_SOURCES): Added skein256.c.
	(HEADERS): Added skein.h.
	* testsuite/skein256-test.c: New test cases.
	* testsuite/Makefile.in (TS_NETTLE_SOURCES): Added
	skein256-test.c.

2016-10-01  Niels Möller  <nisse@lysator.liu.se>

	* Released nettle-3.3.

2016-09-13  Niels Möller  <nisse@lysator.liu.se>

	* nettle-meta-hashes.c (nettle_hashes): Added SHA3 hashes.
	Reported missing by Thomas Walter.
	* testsuite/meta-hash-test.c: Update test accordingly.
